--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flower Bank Application | Shahed</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+<body class="bg-[#000] text-white min-h-screen flex items-center justify-center p-4">
+
+    <div class="w-full max-w-2xl bg-[#262626] rounded-xl shadow-lg p-6">
+      <h1 class="text-2xl font-bold mb-6 text-center">🌸 Flower Bank App</h1>
+
+      <!-- Balance Display -->
+      <div class="mb-6 text-center">
+        <p class="text-lg">Current Balance</p>
+        <p id="balance" class="text-3xl font-bold">BDT 0</p>
+      </div>
+      
+    </div>
     
 </body>
 </html>
