Create Action Buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         <p class="text-lg">Current Balance</p>
         <p id="balance" class="text-3xl font-bold">BDT 0</p>
       </div>
-      
+
+      <!-- Action Buttons -->
+      <div class="flex justify-center gap-4 mb-6 flex-wrap">
+        <button id="addBtn" class="bg-white text-black cursor-pointer px-4 py-2 rounded font-semibold">Add Money</button>
+        <button id="withdrawBtn" class="bg-white text-black cursor-pointer px-4 py-2 rounded font-semibold">Withdraw Money</button>
+        <button id="historyBtn" class="bg-white text-black cursor-pointer px-4 py-2 rounded font-semibold">Transaction History</button>
+      </div>
+
     </div>
     
 </body>
