Add Forms and History Sections

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         <button id="historyBtn" class="bg-white text-black cursor-pointer px-4 py-2 rounded font-semibold">Transaction History</button>
       </div>
 
+      <!-- Forms and History Sections -->
+      <div id="formSection" class="space-y-6">
+        
+        <!-- Add Money Form -->
+        <div id="addForm" class="hidden">
+          <label class="block mb-2 font-semibold">Enter Amount to Add</label>
+          <input type="number" id="addAmount" class="w-full p-2 rounded text-white" placeholder="BDT" />
+          <button id="confirmAdd" class="mt-2 bg-white cursor-pointer text-black px-4 py-2 rounded font-semibold">Confirm Add</button>
+        </div>
+
+      </div>
+
     </div>
     
 </body>
