--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
 
       <!-- Forms and History Sections -->
       <div id="formSection" class="space-y-6">
-        
+
         <!-- Add Money Form -->
         <div id="addForm" class="hidden">
           <label class="block mb-2 font-semibold">Enter Amount to Add</label>
           <input type="number" id="addAmount" class="w-full p-2 rounded text-white" placeholder="BDT" />
           <button id="confirmAdd" class="mt-2 bg-white cursor-pointer text-black px-4 py-2 rounded font-semibold">Confirm Add</button>
+        </div>
+
+        <!-- Withdraw Money Form -->
+        <div id="withdrawForm" class="hidden">
+          <label class="block mb-2 font-semibold">Enter Amount to Withdraw</label>
+          <input type="number" id="withdrawAmount" class="w-full p-2 rounded text-white" placeholder="BDT" />
+          <button id="confirmWithdraw" class="mt-2 bg-white cursor-pointer text-black px-4 py-2 rounded font-semibold">Confirm Withdraw</button>
         </div>
 
       </div>
