fix js file link bug.. js file not working. fix it

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
       </div>
 
     </div>
+
+
+    <!-- script file -->
+    <script type="module" src="./js/app.js"></script>
     
 </body>
 </html>
