--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Bank Application | Shahed</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-[#000] text-white min-h-screen flex items-center justify-center p-4">
+<body style="font-family: 'Space Grotesk', sans-serif;" class="bg-[#000] text-white min-h-screen flex items-center justify-center p-4">
 
     <div class="w-full max-w-2xl bg-[#262626] rounded-xl shadow-lg p-6">
       <h1 class="text-2xl font-bold mb-6 text-center">🌸 Flower Bank App</h1>
